# unix-utilities-in-various-languages

./: .gitignore  Makefile  README
cat/: cat.f90  f90getopt.F90
ls/: ls.f90
mv/: CMakeLists.txt
mv/src/: main.cpp
tests/: run_tests.sh
tests/cat/: my_tests.sh
tests/mv/: FreeBSD-legacy_test.sh
